[package]
name = "double_ratchet_imp"
version = "0.1.0"
authors = ["cpeale"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false

[dependencies]
rand = "0.7.3"
rand_core = "0.4"
hashbrown = "0.1"
aes = "0.3"
block-modes = "0.3"
clear_on_drop = "0.2"
generic-array = "0.12"
hkdf = "0.7"
hmac = "0.7"
rand_os = "0.1"
sha2 = "0.8"
subtle = "2"
x25519-dalek = "0.5"
double-ratchet = "0.1.0"
openssl = "0.10.30"
chrono = "0.4.19"
ed25519-dalek = "1.0.1"